chore: support macOS